# VisTool

./: .gitignore  DEVELOPER_README.MD  DEVELOPER_README.md  INSTRUCTIONS_README.md  README.md  SETUP_README.md  pyproject.toml
VisTool/: __init__.py  visualize.py  wrangle.py
analysis_package/: download.py  visualize.py  wrangle.py
analysis_package/.ipynb_checkpoints/: visualize-checkpoint.py
analysis_package/data/: Monthly_AE_Attendances_Nov_2024.csv
binder/: environment.yml
notebooks/: advanced_example_usage.ipynb  documentation.ipynb  example_usage.ipynb  interactive_usage_in_dev.ipynb
tests/: Tests.xlsx  functional_testing.xlsx  test_combine.py  test_download.py  test_visualize.py  test_wrangle.py
tests/.ipynb_checkpoints/: test_visualize-checkpoint.py
