[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis_package"
dynamic = ["version"]
description = "A Python package for data analysis, cleaning, and visualization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Guled Abdullahi", email = "gissa8991@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "matplotlib>=3.1.3",
    "numpy>=1.26.1",
    "pandas>=2.0.1",
    "panel>=0.14.0",        
    "seaborn>=0.12.2",      
]

[project.urls]
Homepage = "https://github.com/KaysHaydock/HPDM139_2/tree/main"

[tool.hatch.version]
path = "analysis_package/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "analysis_package",   
]
